----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-08-09 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/turkish update, thanks to Bora Alioglu
    * libraries/get_foreign.lib.php: bug 1005826, problem with foreign key
      dropdowns, thanks to Joerg Klein (j0erch) for the fix
    
2004-08-08 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/relation.lib.php: 
        bug 1005414, undefined offset when no display field has been defined;
        bug 1004546, sort error in dropdown list of foreign values;
        incorrect result was freed
    * libraries/relation.lib.php: use natural order sort according to config
    * db_details_structure.php, pdf_pages.php, pdf_schema.php: make it work
      with mysqli extension
    * scripts/upgrade_tables_mysql_4_1_2+.sql: new script to upgrade pmadb
      on MySQL 4.1.2
    * libraries/bookmark.lib.php: bug (mysqli)
    * tbl_query_box.php: field list does not show (mysqli)
    * libraries/sqlparser.lib.php: cannot copy a table structure (MySQL 4.1.x)
    ### 2.6.0-rc1 released

2004-08-08 Michal Čihař  <michal@cihar.com>
    * calendar.php: Include correct stylesheet (bug #1005421).

2004-08-07 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/turkish update, thanks to Bora Alioglu
    * lang/slovak: Updated, thanks to Lubos Klokner (erkac)
    * lang/polish: Updated, thanks to Jakub Wilk (ubanus).
    * lang/dutch: bug 1000683, backslash typo
    * libraries/mysql_charsets.lib.php: bug 1005120, duplicated line

2004-08-06 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_properties_operations.php: bug 1004523, now display table options
      according to the possibilities of the table types

2004-08-06 Michal Čihař  <michal@cihar.com>
    * tbl_change.php: Do not free result, we need it later.
    * tbl_relation.php: Some functions do not take parameters (bug #1000021).
    
2004-08-05 Marc Delisle  <lem9@users.sourceforge.net>
    (Patches from Michael Keck)