@@ -5,6 +5,11 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2004-08-10 Michal Čihař  <michal@cihar.com>
+    * libraries/tbl_change.js: Forcibily use 10 as base for parsed numbers,
+      otherwise accidentally octal numbers are expected (part of bug
+      #1005865).
+
 2004-08-09 Marc Delisle  <lem9@users.sourceforge.net>
     * lang/turkish update, thanks to Bora Alioglu
     * libraries/get_foreign.lib.php: bug 1005826, problem with foreign key
